--- a/src/teaeli/OrderDetails.form
+++ b/src/teaeli/OrderDetails.form
@@ -71,6 +71,10 @@
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           <Component id="cancelBtn" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
+                          <Component id="orderCompletedBtn" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="orderReceivedBtn" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
                           <Component id="updateOrderBtn" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -93,6 +97,8 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="updateOrderBtn" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="cancelBtn" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="orderReceivedBtn" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="orderCompletedBtn" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="16" max="32767" attributes="0"/>
               </Group>
@@ -244,6 +250,16 @@
         <Component class="javax.swing.JButton" name="cancelBtn">
           <Properties>
             <Property name="text" type="java.lang.String" value="Cancel"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JButton" name="orderReceivedBtn">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Order Received"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JButton" name="orderCompletedBtn">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Order Completed"/>
           </Properties>
         </Component>
       </SubComponents>
