--- a/src/teaeli/OrderConfirmation.form
+++ b/src/teaeli/OrderConfirmation.form
@@ -119,7 +119,7 @@
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="3" rowCount="1">
                     <Column editable="false" title="Supplier Name" type="java.lang.Object"/>
-                    <Column editable="false" title="Discount" type="java.lang.Object"/>
+                    <Column editable="true" title="Discount" type="java.lang.Object"/>
                     <Column editable="true" title="Tax" type="java.lang.Object"/>
                   </Table>
                 </Property>
@@ -169,7 +169,7 @@
                   <Table columnCount="4" rowCount="1">
                     <Column editable="false" title="Ingridient" type="java.lang.Object"/>
                     <Column editable="false" title="Quantity" type="java.lang.Object"/>
-                    <Column editable="false" title="Price" type="java.lang.Object"/>
+                    <Column editable="true" title="Price" type="java.lang.Object"/>
                     <Column editable="false" title="Total" type="java.lang.Object"/>
                   </Table>
                 </Property>
