--- a/src/teaeli/AdminPannel.form
+++ b/src/teaeli/AdminPannel.form
@@ -323,12 +323,12 @@
                           <Group type="102" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jScrollPane6" alignment="0" pref="619" max="32767" attributes="0"/>
+                                  <Component id="jScrollPane6" alignment="0" pref="630" max="32767" attributes="0"/>
                                   <Group type="102" attributes="0">
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Component id="inventoryIngredientsLbl" min="-2" pref="100" max="-2" attributes="0"/>
                                           <Group type="102" alignment="0" attributes="0">
-                                              <Component id="searchStockIngTxt" min="-2" pref="200" max="-2" attributes="0"/>
+                                              <Component id="searchStockIngComboBox" min="-2" pref="212" max="-2" attributes="0"/>
                                               <EmptySpace max="-2" attributes="0"/>
                                               <Component id="searchStockIngBtn" min="-2" max="-2" attributes="0"/>
                                           </Group>
@@ -350,8 +350,8 @@
                               <Component id="jLabel6" min="-2" pref="20" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="searchStockIngTxt" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                                   <Component id="searchStockIngBtn" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                                  <Component id="searchStockIngComboBox" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jScrollPane6" pref="394" max="32767" attributes="0"/>
@@ -375,8 +375,6 @@
                         </Property>
                         <Property name="text" type="java.lang.String" value="Start typing ingredient name to update stock"/>
                       </Properties>
-                    </Component>
-                    <Component class="javax.swing.JTextField" name="searchStockIngTxt">
                     </Component>
                     <Component class="javax.swing.JButton" name="searchStockIngBtn">
                       <Properties>
@@ -428,6 +426,14 @@
                         </Component>
                       </SubComponents>
                     </Container>
+                    <Component class="javax.swing.JComboBox" name="searchStockIngComboBox">
+                      <Properties>
+                        <Property name="editable" type="boolean" value="true"/>
+                        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                          <StringArray count="0"/>
+                        </Property>
+                      </Properties>
+                    </Component>
                   </SubComponents>
                 </Container>
                 <Container class="javax.swing.JPanel" name="inventoryManagementBlendPanel">
@@ -452,12 +458,12 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="102" attributes="0">
-                                      <Component id="searchStockBlendsTxt" min="-2" pref="200" max="-2" attributes="0"/>
+                                      <Component id="searchStockBlendsComboBox" min="-2" pref="212" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Component id="searchStockBlendsBtn" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace max="32767" attributes="0"/>
                                   </Group>
-                                  <Component id="jScrollPane2" alignment="0" pref="605" max="32767" attributes="0"/>
+                                  <Component id="jScrollPane2" alignment="0" pref="594" max="32767" attributes="0"/>
                                   <Group type="102" attributes="0">
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Component id="inventoryBlendLbl" min="-2" pref="67" max="-2" attributes="0"/>
@@ -478,8 +484,8 @@
                               <Component id="jLabel7" min="-2" pref="20" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="searchStockBlendsTxt" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                                   <Component id="searchStockBlendsBtn" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                                  <Component id="searchStockBlendsComboBox" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jScrollPane2" pref="394" max="32767" attributes="0"/>
@@ -495,8 +501,6 @@
                         </Property>
                         <Property name="text" type="java.lang.String" value="Blends"/>
                       </Properties>
-                    </Component>
-                    <Component class="javax.swing.JTextField" name="searchStockBlendsTxt">
                     </Component>
                     <Component class="javax.swing.JButton" name="searchStockBlendsBtn">
                       <Properties>
@@ -554,6 +558,14 @@
                           <Font name="Segoe UI" size="14" style="0"/>
                         </Property>
                         <Property name="text" type="java.lang.String" value="Start typing blend name to update stock"/>
+                      </Properties>
+                    </Component>
+                    <Component class="javax.swing.JComboBox" name="searchStockBlendsComboBox">
+                      <Properties>
+                        <Property name="editable" type="boolean" value="true"/>
+                        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                          <StringArray count="0"/>
+                        </Property>
                       </Properties>
                     </Component>
                   </SubComponents>
