--- a/src/teaeli/AdminPannel.form
+++ b/src/teaeli/AdminPannel.form
@@ -396,8 +396,8 @@
                             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                               <Table columnCount="3" rowCount="1">
                                 <Column editable="false" title="Ingredient Name" type="java.lang.Object"/>
-                                <Column editable="true" title="Visible Stock (g)" type="java.lang.Object"/>
-                                <Column editable="true" title="Invisible Stock (g)" type="java.lang.Object"/>
+                                <Column editable="false" title="Visible Stock (g)" type="java.lang.Object"/>
+                                <Column editable="false" title="Invisible Stock (g)" type="java.lang.Object"/>
                               </Table>
                             </Property>
                             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -520,7 +520,8 @@
                         <Component class="javax.swing.JTable" name="inventoryBlendTable">
                           <Properties>
                             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                              <Table columnCount="3" rowCount="2">
+                              <Table columnCount="4" rowCount="2">
+                                <Column editable="false" title="Blend Category" type="java.lang.Object"/>
                                 <Column editable="false" title="Blend Name" type="java.lang.Object"/>
                                 <Column editable="false" title="Visible Stock (g)" type="java.lang.Object"/>
                                 <Column editable="false" title="Invisible Stock (g)" type="java.lang.Object"/>
@@ -528,6 +529,11 @@
                             </Property>
                             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                               <TableColumnModel selectionModel="0">
+                                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                                  <Title/>
+                                  <Editor/>
+                                  <Renderer/>
+                                </Column>
                                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                                   <Title/>
                                   <Editor/>
