--- a/src/teaeli/IngredientDetails.form
+++ b/src/teaeli/IngredientDetails.form
@@ -16,6 +16,9 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="Ingredient Details"/>
+    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[500, 314]"/>
+    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -47,8 +50,8 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
+              <Component id="jPanel1" pref="278" max="32767" attributes="0"/>
+              <EmptySpace min="9" pref="9" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -62,6 +65,9 @@
               <Font PropertyName="font" name="Segoe UI Semibold" size="16" style="0"/>
             </TitledBorder>
           </Border>
+        </Property>
+        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[480, 290]"/>
         </Property>
       </Properties>
 
@@ -85,16 +91,17 @@
                               <Component id="unitPriceTxt" max="32767" attributes="0"/>
                               <Component id="itemTypeCombo" min="-2" pref="200" max="-2" attributes="0"/>
                           </Group>
+                          <EmptySpace pref="115" max="32767" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
                           <Component id="cancelBtn" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="deleteItemBtn" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
                           <Component id="updateItemBtn" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="114" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="19" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -123,11 +130,11 @@
                   </Group>
                   <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="updateItemBtn" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                       <Component id="cancelBtn" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                       <Component id="deleteItemBtn" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="updateItemBtn" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="25" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -143,9 +150,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="itemNameTxt">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Aloe Vera C/cut "/>
-          </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="itemNameTxtActionPerformed"/>
           </Events>
@@ -172,9 +176,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="supplierNameTxt">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="KRAETEURMIX LANKA (PVT) LTD. "/>
-          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="supplierNameTxtActionPerformed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
           </AuxValues>
@@ -189,9 +193,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="unitPriceTxt">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="1200.00"/>
-          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="unitPriceTxtActionPerformed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
           </AuxValues>
