--- a/src/teaeli/CreateNewBlendOrder.form
+++ b/src/teaeli/CreateNewBlendOrder.form
@@ -83,7 +83,7 @@
                                           <EmptySpace max="-2" attributes="0"/>
                                           <Component id="weightCombo" min="-2" pref="34" max="-2" attributes="0"/>
                                           <EmptySpace max="-2" attributes="0"/>
-                                          <Component id="blendQtyAddBtn" min="-2" max="-2" attributes="0"/>
+                                          <Component id="blendAddBtn" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
@@ -126,7 +126,7 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="blendsCombo" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
-                              <Component id="blendQtyAddBtn" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                              <Component id="blendAddBtn" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                               <Component id="blendsQtyTxt" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                               <Component id="weightCombo" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                           </Group>
@@ -172,6 +172,9 @@
             </Property>
             <Property name="selectedIndex" type="int" value="-1"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="blendsComboActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
@@ -200,7 +203,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="weightComboActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="blendQtyAddBtn">
+        <Component class="javax.swing.JButton" name="blendAddBtn">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="14" style="0"/>
@@ -208,7 +211,7 @@
             <Property name="text" type="java.lang.String" value="Add"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="blendQtyAddBtnActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="blendAddBtnActionPerformed"/>
           </Events>
         </Component>
         <Container class="javax.swing.JScrollPane" name="jScrollPane1">
